--- a/app/src/App.module.css
+++ b/app/src/App.module.css
@@ -1,7 +1,9 @@
 .app {
   height: 100vh;
+  width: 100%;
   display: grid;
   place-items: center;
+  grid-template-rows: auto 1fr;
 }
 
 .container {
@@ -9,4 +11,17 @@
   margin: 0 1rem;
   justify-items: center;
   gap: 1.5rem;
+}
+
+.logo {
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+.header {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  padding: 1rem 1rem;
+  justify-content: space-between;
 }
