--- a/app/src/App.module.css
+++ b/app/src/App.module.css
@@ -25,3 +25,17 @@
   padding: 1rem 1rem;
   justify-content: space-between;
 }
+
+.wrapper {
+  display: grid;
+  grid-auto-flow: column;
+  grid-template-columns: 1fr auto 1fr;
+  align-items: left;
+  width: 100%;
+  justify-items: center;
+}
+
+.collectionWrapper {
+  height: 500px;
+  overflow-y: scroll;
+}
