--- a/app/src/App.module.css
+++ b/app/src/App.module.css
@@ -6,7 +6,7 @@
   grid-template-rows: auto 1fr;
 }
 
-.container {
+.selectedNft {
   display: grid;
   margin: 0 1rem;
   justify-items: center;
@@ -26,7 +26,7 @@
   justify-content: space-between;
 }
 
-.wrapper {
+.container {
   display: grid;
   grid-auto-flow: column;
   grid-template-columns: 1fr auto 1fr;
@@ -35,7 +35,7 @@
   justify-items: center;
 }
 
-.collectionWrapper {
+.collectionNfts {
   height: 500px;
   overflow-y: scroll;
 }
