--- a/app/src/components/Button/button.module.css
+++ b/app/src/components/Button/button.module.css
@@ -13,10 +13,10 @@ button:hover {
 }
 
 .type--rectangle {
-  width: fit-content;
+  width: 100%;
   background-color: var(--accent-primary);
   color: var(--txt-secondary);
-  font-size: 1.25rem;
+  font-size: 1rem;
   border-radius: 4px;
-  padding: 0.75rem 1rem;
+  padding: 0.5rem 1rem;
 }
